--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@primevue/core": "^4.0.0",
     "@primevue/themes": "^4.0.0",
+    "@vuepic/vue-datepicker": "^8.8.1",
     "autoprefixer": "^10.4.19",
     "pinia": "^2.1.7",
     "postcss": "^8.4.39",
